# static-serial

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  compile_flags.txt  demo  demo.cpp  main.cpp  makefile
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  common.h  handrolled.cpp  naive_memcpy.cpp  protobuf.cpp  stse.cpp
benchmarks/against_protobuf/: README.md  market_data.h  market_data.pb.cc  market_data.pb.h  market_data.proto  mmap.cpp  protobuf.cpp  protobuf_benchmark  stse.cpp  stse_benchmark
examples/: mmap.cpp
include/: static_serial.hpp  static_serial_test.hpp
include/stse/: stse.hpp
include/stse/detail/: concepts.hpp  deserialize.hpp  layout.hpp  memory.hpp  meta_utils.hpp  schema.hpp  serialize.hpp  types.hpp
tests/: main.cpp  not_trivially_copyable.cpp  static_serial_test.hpp  test_aggregate.cpp  test_annotation.cpp  test_annotation.hpp  test_array.cpp  test_endian.cpp  test_error_message.cpp  test_executor.hpp  test_not_serializable_aggregate.cpp  test_not_serializable_scalar.cpp  test_not_serializable_static_container.cpp  test_not_serializable_types.cpp  test_padding.cpp  test_runner.hpp  test_scalar.cpp  test_scalar.hpp  test_static_container.cpp  test_variadic_arguments.cpp  trivially_copyable.cpp  types.hpp  utils.hpp
tests/detail/: test_concepts.hpp  test_deserialize.hpp  test_layout.hpp  test_memory.hpp  test_meta_utils.hpp  test_serialize.hpp
